Fix expand/collapse icons for first load

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -203,3 +203,9 @@ table, tr, td, th {
     text-align: center;
 }
 
+.section_header .fas {
+    border-radius: 50%;
+    border-style: solid;
+    font-size:medium;
+    padding: 2px;
+}
